Try to get synchronizer to read and parse maven-metadata